giropops-senhas/manifests/overlays/eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-senhas
  namespace: giropops-senhas
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 2
  template:
    spec:
      containers:
      - name: giropops-senhas
        resources:
          requests:
            cpu: "0.25"
            memory: 128Mi
          limits:
            memory: 256Mi
            cpu: "0.5"
